--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "laravel-echo": "^1.6.1",
+        "pusher-js": "^5.1.1",
         "socket.io-client": "^2.3.0"
     }
 }
