--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,11 @@
     ],
     "license": "MIT",
     "require": {
+        "ext-curl": "*",
+        "ext-json": "*",
         "php": "^7.2",
         "beyondcode/laravel-websockets": "^1.4",
+        "cboden/ratchet": "^0.4.2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^2.0",
